# sportz

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md
backend-python/: .env.example  README.md  main.py  pyproject.toml
backend-python/db/: __init__.py  database.py  models.py
backend-python/routes/: __init__.py  commentary.py  matches.py
backend-python/utils/: __init__.py  match_status.py
backend-python/validations/: __init__.py  commentary.py  matches.py
backend-python/ws/: __init__.py  connection.py  server.py
backend/sql/: create_table.sql
backend/src/: main.rs
backend/src/common/: constants.rs  database.rs  logger.rs  mod.rs  response.rs  state.rs
backend/src/entity/: commentary.rs  matches.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
backend/src/routes/: commentary.rs  matches.rs  mod.rs
backend/src/utils/: match_status.rs  mod.rs
backend/src/validation/: commentary.rs  matches.rs  mod.rs
backend/src/ws/: connection.rs  handler.rs  message.rs  mod.rs
